addons/opa-gatekeeper/templates/priv-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test
  namespace: default
  labels:
    app: nginx-privileged
spec:
  hostPID: true
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: true
